# Photo-SLAM-ROS

./: .gitignore  CMakeLists.txt  build.sh  common_commands  package.xml  run.sh
docker/: Dockerfile  docker-compose.yml  run_docker.sh
docker/scripts/: entrypoint.sh
gaussian_interface/install/: local_setup.sh  setup.sh
gaussian_interface/install/gaussian_interface/include/gaussian_interface/gaussian_interface/msg/: gaussian_array.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  single_gaussian.h  single_gaussian.hpp
gaussian_interface/install/gaussian_interface/include/gaussian_interface/gaussian_interface/msg/detail/: gaussian_array__builder.hpp  gaussian_array__rosidl_typesupport_fastrtps_c.h  gaussian_array__rosidl_typesupport_fastrtps_cpp.hpp  gaussian_array__type_support.h  gaussian_array__type_support.hpp  single_gaussian__functions.c  single_gaussian__rosidl_typesupport_fastrtps_cpp.hpp  single_gaussian__rosidl_typesupport_introspection_c.h  single_gaussian__rosidl_typesupport_introspection_cpp.hpp  single_gaussian__struct.hpp  single_gaussian__type_support.c  single_gaussian__type_support.cpp  single_gaussian__type_support.hpp
gaussian_interface/install/gaussian_interface/local/lib/python3.10/dist-packages/gaussian_interface/: _gaussian_interface_s.ep.rosidl_typesupport_c.c  _gaussian_interface_s.ep.rosidl_typesupport_introspection_c.c
gaussian_interface/install/gaussian_interface/local/lib/python3.10/dist-packages/gaussian_interface-0.0.1-py3.10.egg-info/: SOURCES.txt  top_level.txt
gaussian_interface/install/gaussian_interface/local/lib/python3.10/dist-packages/gaussian_interface/msg/: __init__.py  _gaussian_array.py  _gaussian_array_s.c
gaussian_interface/install/gaussian_interface/share/ament_index/resource_index/rosidl_interfaces/: gaussian_interface
gaussian_interface/install/gaussian_interface/share/gaussian_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
gaussian_interface/install/gaussian_interface/share/gaussian_interface/cmake/: ament_cmake_export_libraries-extras.cmake  export_gaussian_interface__rosidl_generator_cExport.cmake  export_gaussian_interface__rosidl_generator_cppExport.cmake  export_gaussian_interface__rosidl_generator_pyExport-noconfig.cmake  export_gaussian_interface__rosidl_generator_pyExport.cmake  export_gaussian_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_gaussian_interface__rosidl_typesupport_fastrtps_cppExport.cmake  gaussian_interface__rosidl_typesupport_cExport-noconfig.cmake  gaussian_interface__rosidl_typesupport_introspection_cExport.cmake  gaussian_interface__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
gaussian_interface/install/gaussian_interface/share/gaussian_interface/msg/: GaussianArray.idl  SingleGaussian.idl
gaussian_interface/log/: latest_build
include/: gaussian_mapper.h  gaussian_ros_publisher.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/photo-slam-ros/lib/photo-slam-ros/: euroc_stereo  replica_mono  replica_rgbd  train_colmap  tum_mono  tum_rgbd  view_result
install/photo-slam-ros/share/ament_index/resource_index/package_run_dependencies/: photo-slam-ros
install/photo-slam-ros/share/ament_index/resource_index/parent_prefix_path/: photo-slam-ros
install/photo-slam-ros/share/photo-slam-ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/photo-slam-ros/share/photo-slam-ros/cmake/: photo-slam-rosConfig-version.cmake  photo-slam-rosConfig.cmake
install/photo-slam-ros/share/photo-slam-ros/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/: gaussian_mapper.cpp  gaussian_renderer.cpp  gaussian_ros_publisher.cpp
viewer/: imgui_viewer.cpp
